# range-coding-fpga

./: CMakeLists.txt
include/: constexpr_math.hpp  exception_handler.hpp  onchip_memory_with_cache.hpp  pipe_array.hpp  shifting_array.hpp  test_utils.h  utils.hpp
src/: host_decoder.hpp  main.cpp  range_coding.h  range_decoder.hpp  range_encoder.hpp  store.hpp
